# UV-Template

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
src/uv_template/: cli.py
