[project]
# Set the name of your project, and other metadata:
name = "uv-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    # { name = "Damien THIRION", email = "damien.thirion@proton.me" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.20.0",
    "httpx>=0.27.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
]

# Define the CLI entry point
[project.scripts]
uv-template = "uv_template:app"

[build-system]
requires = ["uv_build>=0.9,<0.11"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pre-commit>=4.5", "ruff>=0.15", "ty>=0.0.15"]
